# labs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  clean_build_run.sh  docker-compose.yml  docker-run.sh  tsconfig.tsbuildinfo
.config/husky/: pre-push
.github/: CONTRIBUTING.md  SECURITY.md  renovate.json
.github/workflows/: docker_to_GHCR.yml  rust.yml
apps/clones-cli/: .prettierrc  (+9 more)
apps/sim-core/: .gitignore  Cargo.toml  README.md  clean_build_run.sh  package.json  tsconfig.json  vercel.json
apps/sim-core/scripts/: README.md  install-dependencies.sh  preinstall.js  upload_builtin_behaviors.ts
apps/sim-core/scripts/integration_tests/: package.json
apps/sim-core/scripts/integration_tests/cypress/integration/: sample_spec.js
distributed_collab/: LICENSE.md  README.md  mix.exs
hash_helm_chart/: README.md  helm-ingress-nginx.yaml  k3d-config.yaml
libs/turbine/: Cargo.toml  README.md  rust-toolchain.toml
libs/turbine-transformer/: Cargo.toml  README.md
libs/turbine-transformer/.cargo/: config.toml
libs/turbine-transformer/src/: lib.rs  path.rs  property.rs  reachable.rs  select.rs  value.rs
libs/turbine-transformer/src/property/: select.rs  update.rs
libs/turbine-transformer/src/select/: clause.rs  dynamic.rs  property.rs  type_.rs
libs/turbine/lib/codegen/: Cargo.toml
libs/turbine/lib/codegen/src/: analysis.rs  data.rs  entity.rs  error.rs  graph.rs  lib.rs  name.rs  property.rs  shared.rs  utilities.rs
libs/turbine/lib/codegen/src/analysis/: facts.rs  unify.rs
libs/turbine/lib/codegen/src/property/: inner.rs  property_value.rs  type_.rs
libs/turbine/lib/codegen/tests/: clippy.toml  test_snapshots.rs
libs/turbine/lib/codegen/tests/snapshots/: 01-property-type-ref.json  01-property-type-ref.stdout  02-property-type-oneOf-data-type.json  02-property-type-oneOf-data-type.stdout  03-property-type-object.json  03-property-type-object.stdout  04-property-type-array.json  04-property-type-array.stdout  05-property-type-oneOf-array.json  05-property-type-oneOf-array.stdout  06-property-type-self-referential.json  06-property-type-self-referential.stdout  07-property-type-object-nested.json  07-property-type-object-nested.stdout  08-entity-type-empty.json  08-entity-type-empty.stdout  09-entity-type-single-property.json  09-entity-type-single-property.stdout  10-entity-type-single-property-optional.json  10-entity-type-single-property-optional.stdout  11-entity-type-multiple-properties.json  11-entity-type-multiple-properties.stdout  12-entity-multiple-versions.json  12-entity-multiple-versions.stdout  13-entity-duplicate-identifier.json  13-entity-duplicate-identifier.stdout  14-entity-properties-clash.json  14-entity-properties-clash.stdout  15-entity-link.json  15-entity-link.stdout  16-data-type-custom.json  16-data-type-custom.stdout  17-property-type-multiple-versions.json  17-property-type-multiple-versions.stdout  18-property-type-data-type-clash.json  18-property-type-data-type-clash.stdout  19-property-type-inner-type-name.json  19-property-type-inner-type-name.stdout
libs/turbine/lib/skeletor/: Cargo.toml  README.md
libs/turbine/lib/skeletor/src/: cargo.rs  lib.rs  vfs.rs
libs/turbine/lib/skeletor/templates/: Cargo.toml.askama
libs/turbine/lib/turbine/: Cargo.toml
libs/turbine/lib/turbine/src/: entity.rs  error.rs  hierarchy.rs  lib.rs  path.rs  polyfill.rs  serialize.rs
libs/turbine/lib/turbine/src/entity/: interval.rs
libs/turbine/lib/turbine/src/types/: data.rs
libs/turbine/lib/turbine/src/types/data/: boolean.rs  empty_list.rs  null.rs  number.rs  object.rs  text.rs
scripts/: builtin_behaviors  upload_builtin_behaviors_readme.md
sgai/: README.md  package.json
(+597 files in other folders)
