[package]
name = "skeletor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = { workspace = true, features = ['anyhow'] }
url = "2.3.1"
reqwest = { version = "0.11.18", features = ['blocking'] }
askama = "0.12.0"
pathdiff = "0.2.1"
tracing = "0.1.37"

serde = { version = "1.0.163", features = ['derive'] }
serde_json = "1.0.96"

quote = "1.0.26"
proc-macro2 = "1.0.56"
syn = "2.0.15"

# Once stabilized move to 0.1.3, but we need the fully quantified paths
onlyerror = { git = "https://github.com/parasyte/onlyerror", default-features = false }

codegen = { path = "../codegen" }
