[package]
name = "turbine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ['derive', 'alloc'], default-features = false }
serde_json = { version = "1.0.96", default-features = false, features = ['alloc'] }
error-stack = { workspace = true, default-features = false }
time = { version = "0.3.20", features = ['serde-well-known'], default-features = false }
hashbrown = { version = "0.14.0", default-features = false, features = ["ahash", "serde"] }
uuid = { version = "1.3.1", features = ['serde'], default-features = false }
onlyerror = { version = "0.1.3", default-features = false }

type-system = { git = "https://github.com/blockprotocol/blockprotocol", rev = "542836" }
